--- a/apps/worker/wrangler.jsonc
+++ b/apps/worker/wrangler.jsonc
@@ -8,8 +8,8 @@
 
     // 🔸 Публичные переменные (не секреты!)
   "vars": {
-    "FRONTEND_ORIGIN": "https://cluster-lens.vercel.app",
-    "FRONTEND_URL": "https://cluster-lens.vercel.app"
+    "FRONTEND_ORIGIN": "https://cluster-lens.vercel.app/",
+    "FRONTEND_URL": "https://cluster-lens.vercel.app/"
   },
 
   "kv_namespaces": [
