fix: update FRONTEND_URL to point to the cluster.html page

--- a/apps/worker/wrangler.jsonc
+++ b/apps/worker/wrangler.jsonc
@@ -9,7 +9,7 @@
     // 🔸 Публичные переменные (не секреты!)
   "vars": {
     "FRONTEND_ORIGIN": "https://cluster-lens.vercel.app/",
-    "FRONTEND_URL": "https://cluster-lens.vercel.app/"
+    "FRONTEND_URL": "https://cluster-lens.vercel.app/cluster.html"
   },
 
   "kv_namespaces": [
