--- a/apps/worker/wrangler.jsonc
+++ b/apps/worker/wrangler.jsonc
@@ -6,6 +6,8 @@
     // 🔸 Дата совместимости (ставь текущую/сегодняшнюю)
   "compatibility_date": "2026-01-14",
 
+  "workers_dev": true,
+
     // 🔸 Публичные переменные (не секреты!)
   "vars": {
     "FRONTEND_ORIGIN": "https://cluster-lens.vercel.app/",
